@@ -1,3 +1,7 @@
+2008-06-07  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-use-header-line-title): Modify the doc-string.
+
 2008-06-06  Naohiro Aota  <nao.aota@gmail.com>
 
 	* w3m.el (w3m-select-buffer): Don't delete other windows.
